2007-06-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalEntityObject.m ([iCalEntityObject -setCreated:newCreated]) 
	([iCalEntityObject -created], [-setLastModified:_value]) 
	([iCalEntityObject -lastModified]) 
	([iCalEntityObject -setTimeStampAsDate:newTimeStamp]) 
	([iCalEntityObject -timeStampAsDate], [-setStartDate:_value]) 
	([iCalEntityObject -startDate]): no longer use the methods
	provided by the removed module CardGroup+iCal.

	* iCalDateTime.m ([iCalDateTime -setDate:dateTime]): take the date
	passed as parameter as an all day date.
	([iCalDateTime -isAllDay]): new method determining whether the
	current value is an all day value.

	* NSString+NGCards.m ([NSString -isAllDayDate]): new method that
	determines whether the date represented in "self" is an all day
	date (date only) or not (date + time).

	* CardElement.h: moved IS_EQUAL macro from removed module
	"common.h".

	* CardGroup+iCal.[hm]: removed category module.

2007-04-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* NGVCard.m ([NGVCard -n]): simplified method by returning the
	values of the element returned by uniqueChildWithTag:.

2007-03-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalEntityObject.m ([iCalEntityObject -symbolicAccessClass]):
	new method that parses the "CLASS" element of the card and returns
	an enum value.

	* NSString+NGCards.m ([NSString -foldedForVersitCards]):
	simplified method by initializing and returning folderString
	unconditionnally. If length < 76, the original string is appended
	to it.

	* CardGroup.m ([CardGroup +groupWithTag:aTag]): simply invoke
	[self elementWithTag:].
	([CardGroup +groupWithTag:aTagchildren:someChildren]): same as
	above.

2007-03-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalEntityObject.h (enum): added an enum with iCalAccessPublic,
	iCalAccessPrivate and iCalAccessConfidential values.

2007-02-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* CardGroup.m ([CardGroup -firstChildWithTag:aTag]): new method.
